<resources>
    <string name="app_name">MonitoreoAcua</string>
    <string name="acuaterra">ACUATERRA</string>
    <string name="correo_electr_nico">Correo Electrónico</string>
    <string name="contrase_a">Contraseña</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="registrarse">Registrarse</string>
    <string name="logo">Logo</string>
    <string name="logo_aquaterra">Logo AquaTerra</string>
    <string name="registro_usuario">Registro Usuario</string>
    <string name="nombre">Nombre</string>
    <string name="n_mero_de_ficha">Número de Ficha</string>
    <string name="jornada">Jornada</string>
    <string name="sede">Sede</string>
    <string name="email">Email</string>
    <string name="contrase_a1">Contraseña</string>
    <string name="repetir_contrase_a1">Repetir Contraseña</string>
    <string name="registrar">Registrar</string>
    <string name="bienvenido_a_acuaterra">¡Bienvenido a AcuaTerra!</string>
    <string name="bienvenido_a_acuaterra1">Bienvenido a AcuaTerra</string>
</resources>