<?xml version="1.0" encoding="utf-8"?>

<!--

**************************************************
Nombre: Diego Alonso Ruiz, duber Alberto Imbachí, William David Perdigón
E-mail: diego_aruiza@soy.sena.edu.co, Wdperdigon1227@gmail.com,  duberimbachi7@gmail.com
Fecha: 6 de diciembre de 2024
Android Studio: Java
Descripción: Archivo XML - Correspondiente a la interfaz "login" - AcuaTerra
**************************************************

-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.LoginActivity"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@drawable/fondo1"
    >


    <!-- Círculo decorativo en la esquina superior izquierda -->

    <!-- Título del formulario -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="75dp" />

            <!-- Imagen del logo -->

            <ImageView
                android:id="@+id/logo"
                android:layout_width="236dp"
                android:layout_height="137dp"
                android:layout_gravity="center"
                android:contentDescription="@string/logo"
                android:src="@drawable/logo3" />

            <TextView
                android:id="@+id/form_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/koulen"
                android:gravity="center"
                android:paddingBottom="20dp"
                android:text="@string/acuaterra"
                android:textColor="@color/black"
                android:textSize="32sp"
                android:textStyle="bold" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="10dp" />

            <!-- Campo de email -->

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textFieldEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorAccent"
                android:hint="@string/correo_electr_nico">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Campo de contraseña -->

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textFieldPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorAccent"
                android:hint="@string/contrase_a"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="10dp" />

            <!-- Botón para iniciar sesión -->

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLogin"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/colorPrimaryDark"
                android:elevation="8dp"
                android:text="@string/iniciar_sesi_n"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <!-- Botón para registrarse -->

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnGoRegister"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/colorPrimaryDark"
                android:elevation="8dp"
                android:text="@string/registrarse"
                android:textColor="@color/black"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
